tests/snapshots/responses_api_test__reasoning_summary_has_content.snap
---
source: tests/responses_api_test.rs
expression: json
---
{
  "attributes": {
    "gen_ai.input.messages": "[input_messages]",
    "gen_ai.operation.name": "chat",
    "gen_ai.output.messages": "[output_messages]",
    "gen_ai.provider.name": "openai",
    "gen_ai.request.model": "[request_model]",
    "gen_ai.response.id": "[response_id]",
    "gen_ai.response.model": "[response_model]",
    "gen_ai.system": "openai",
    "gen_ai.system_instructions": "[{\"content\":\"Think step by step. Show your work.\",\"type\":\"text\"}]",
    "gen_ai.usage.input_tokens": "[input_tokens]",
    "gen_ai.usage.output_tokens": "[output_tokens]",
    "gen_ai.usage.total_tokens": "[total_tokens]",
    "openinference.span.kind": "LLM"
  },
  "end_time": "[timestamp]",
  "name": "chat",
  "span_id": "[span_id]",
  "span_kind": "Client",
  "start_time": "[timestamp]",
  "status": "Ok",
  "trace_id": "[trace_id]"
}
